# u-geometry

./: Cargo.toml  README.md
benches/: geometry_bench.rs
src/: collision.rs  lib.rs  minkowski.rs  offset.rs  polygon.rs  primitives.rs  robust.rs  transform.rs
